# egm_dataset

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
requirements/: dev-requirements.txt  requirements.txt
src/egm_dataset/cli/: stage_1.py  stage_2.py  stage_3.py
src/egm_dataset/infra/: typing.py
